--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -14,6 +14,7 @@ spec:
   params:
     - name: repo-url
     - name: branch
+    - name: build-image
       default: main
   tasks:
     - name: init
@@ -22,7 +23,32 @@ spec:
           workspace: pipeline-workspace          
       taskRef:
         name: cleanup
-
+    - name: tests
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+      taskRef:
+        name: nose
+      params:
+      - name: database_uri
+        value: "sqlite:///test.db"
+      - name: args
+        value: "-v --with-spec --spec-color"
+      runAfter:
+        - clone
+    - name: build
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+      taskRef:
+        name: buildah
+        kind: ClusterTask
+      params:
+      - name: IMAGE
+        value: "$(params.build-image)"
+      runAfter:
+        - tests
+        - lint
     - name: clone
       workspaces:
         - name: output
